--- a/project 2/src/.vscode/settings.json
+++ b/project 2/src/.vscode/settings.json
@@ -23,6 +23,8 @@
         "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp"
     }
 }
