--- a/project 2/src/.vscode/settings.json
+++ b/project 2/src/.vscode/settings.json
@@ -25,6 +25,7 @@
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "iosfwd": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "cmath": "cpp"
     }
 }
