--- a/project 2/src/.vscode/settings.json
+++ b/project 2/src/.vscode/settings.json
@@ -26,6 +26,7 @@
         "typeinfo": "cpp",
         "iosfwd": "cpp",
         "iostream": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "fstream": "cpp"
     }
 }
