--- a/project 2/src/.vscode/settings.json
+++ b/project 2/src/.vscode/settings.json
@@ -27,6 +27,7 @@
         "iosfwd": "cpp",
         "iostream": "cpp",
         "cmath": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "chrono": "cpp"
     }
 }
